LW comments on ch 5-6 guidelines

--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -138,9 +138,9 @@ Criteria & Rationale & Example characteristics & Example sources of information 
 \hline
 \endhead
 Threats & CU-specific threats may impact survival rates, growth, and/or reproductive success and therefore statuses and trends & Ecosystem modifications including water extraction, forestry, fires, agriculture, and development, fishing, pollution, aquaculture, and genetic impacts from hatcheries & Published threats and habitat assessments by CU \\
-Dominant environmental drivers & CU-specific environmental or climatic conditions may impact survival, growth, maturation, or reproductive success and hence status and trends, either due to environmental drivers themselves or the interaction of different environments with common anthropogenic threats & Freshwater: river gradient, connectivity, macroclimate of spawning and rearing habitat, hydrological regime (e.g., (1) for Chinook Salmon). Marine: upwelling, currents, productivity of nearshore environment at ocean entry & Distribution of Freshwater and and Marine Adaptive Zones (2), biogeolclimatic zones describing macroclimates, as in (3), habitat characteristics provided in CU-specific stock assessments, Traditional Knowledge\\
-Life-history characteristics & CUs with the same life-history characteristics such as age-at-ocean-entry are more likely to overlap in spatial and temporal distribution and therefore respond similarly to common threats and environmental drivers compared to those with divergent characteristics & Life-history type (stream vs ocean for Chinook Salmon), age-at-ocean entry, age-at-return, migration timing & CU-specific biological information from stock assessments, Traditional Knowledge \\
-Carrying capacity & Population size is related to the probability of dropping below critical conservation thresholds and hence vulnerability to threats and/or random perturbations & Spawner abundances & CU-specific biological information from stock assessments, watershed size (4), Traditional Knowledge\\
+Dominant environmental drivers & CU-specific environmental or climatic conditions may impact survival, growth, maturation, or reproductive success and hence status and trends, either due to environmental drivers themselves or the interaction of different environments with common anthropogenic threats & Freshwater: river gradient, connectivity, macroclimate of spawning and rearing habitat, hydrological regime (e.g., (1) for Chinook Salmon). Marine: upwelling, currents, productivity of nearshore environment at ocean entry & Distribution of Freshwater and and Marine Adaptive Zones (2), biogeolclimatic zones describing macroclimates, as in (3), habitat characteristics provided in CU-specific stock assessments, Indigenous Knowledge\\
+Life-history characteristics & CUs with the same life-history characteristics such as age-at-ocean-entry are more likely to overlap in spatial and temporal distribution and therefore respond similarly to common threats and environmental drivers compared to those with divergent characteristics & Life-history type (stream vs ocean for Chinook Salmon), age-at-ocean entry, age-at-return, migration timing & CU-specific biological information from stock assessments, Indigenous Knowledge \\
+Carrying capacity & Population size is related to the probability of dropping below critical conservation thresholds and hence vulnerability to threats and/or random perturbations & Spawner abundances & CU-specific biological information from stock assessments, watershed size (4), Indigenous Knowledge\\
 \hline
 (\#tab:CUrepres)
 \end{longtable}
