--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -33,7 +33,7 @@ Second, in the estimation of benchmarks, statistical uncertainties can be repres
 
 
 
-Third, structural uncertainty in stock-recruitment models underlying benchmark estimation can swamp other sources of uncertainty, and requires careful consideration based on available data and biological understanding of the population dynamics, ideally with peer review.  We provide one example of structural uncertainty in the Interior Fraser River Coho study based on prior assumptions about population capacity, but other components, such as decisions about depensation at low abundances, shared or independent variability in productivity among CUs, and strength of over-compensation (e.g., Rickver versus Beverton-Holt) should be considered.  
+Third, structural uncertainty in stock-recruitment models underlying benchmark estimation can swamp other sources of uncertainty, and requires careful consideration based on available data and biological understanding of the population dynamics, ideally with peer review.  We provide one example of structural uncertainty in the Interior Fraser River Coho study based on prior assumptions about population capacity, but other components, such as decisions about depensation at low abundances, shared or independent variability in productivity among CUs, and strength of over-compensation (e.g., Ricker versus Beverton-Holt) should be considered.  
 
 
 <!--CH removed: Both structural and parameter uncertainties in run reconstructions may also impact CU assessments. However, @peacockEvaluatingConsequencesCommon2020 found that CU statuses were generally robust to most common assumptions in run reconstructions but that overestimating catch tended to increase rates of status misclassification. -->
@@ -50,7 +50,7 @@ Uncertainties in peer-reviewed WSP assessments are captured qualitatively throug
 
 ### Proportional LRPs
 
-Uncertainties in status derived from proportional LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are poorly represented by the data-rich CUs that are included. To clearly communicate this uncertainty, we suggest labeling these LRPs as provisional when all the data-rich CUs have status above Red. Even when data-limited CUs have similar threats, environmental conditions and drivers, life-history characteristics and capacities as the data-rich CUs, population dynamics may diverge due to other unaccounted for processes. We recommend caution when applying provisional LRPs that do not include direct information from all CUs. In these cases, we recommend implementing a monitoring program to inform CU-specific assessments.
+Uncertainties in status derived from proportional LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are poorly represented by the data-rich CUs that are included. To clearly communicate this uncertainty, we suggest labeling these LRPs as provisional when all the data-rich CUs have status above Red. Even when data-limited CUs have similar threats, environmental conditions and drivers, life-history characteristics and capacities as the data-rich CUs, population dynamics may diverge due to other processes that are not accounted for. We recommend caution when applying provisional LRPs that do not include direct information from all CUs. In these cases, we recommend implementing a monitoring program to inform CU-specific assessments.
 
 
 ### Aggregate Abundance LRPs
@@ -58,18 +58,18 @@ Uncertainties in status derived from proportional LRPs can arise from the exclus
 **Logistic regression LRPs**
 
 For logistic regression LRPs, uncertainties can arise from statistical estimation of the stock-recruitment and logistic models. In our case studies, we provide 95% CIs and assess their overlap with current status. These CIs represent uncertainty in the estimation of the logistic regression incorporating uncertainty in the underlying benchmarks (e.g., from spawner-recruitment relationships or the watershed-area model). When estimated in a Bayesian framework, the probability distribution of LRPs can be generated to provide the probability that the current status is above the LRP given uncertainties in the LRP. In future analyses, uncertainty in current spawner abundances could be integrated with uncertainty to derive probabilities of breaching LRPs that accounts for both sources. 
-The estimation of the logistic regression model can be statistically integrated with the estimation of the underlying spawner-recruitment based benchmarks. This statistical integration allow uncertainties to be propagated from CU-level benchmarks to SMU-level LRPs.
+The estimation of the logistic regression model can be statistically integrated with the estimation of the underlying spawner-recruitment based benchmarks. This statistical integration allows uncertainties to be propagated from CU-level benchmarks to SMU-level LRPs.
 
 Similar to proportional LRPs, uncertainties in logistic regression LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are not well represented by the data-rich CUs that are included. Further uncertainties in logistic regression LRPs can arise if the management system has changed over time such that selectivity from fisheries among CUs has diverged, or if the covariance in population dynamics has changed due to natural or other anthropogenic factors. In some cases, covariance among CUs may be driven by synchronous trends in hatchery enhancement creating misleading and possibly biased LRP estimates.<!--CH omit: such that the relationship between aggregate abundances and CU statuses has changed-->  
 
-Furthermore, uncertainties in both aggregate abundances LRPs (logistic regression and projection LRPs) can arise because these LRPs are derived from CU statuses on a single metric as a proxy for status on multiple dimensions. In some cases, these statuses may diverge because  of additional metrics considered and the generationally smoothed time-series used to assess current status in the multidimensional approach (as implemented by the Salmon Scanner). 
+Furthermore, uncertainties in both aggregate abundance LRPs (logistic regression and projection LRPs) can arise because these LRPs are derived from CU statuses on a single metric as a proxy for status on multiple dimensions. In some cases, these statuses may diverge because  of additional metrics considered and the generationally smoothed time-series used to assess current status in the multidimensional approach (as implemented by the Salmon Scanner). 
 
 <!--CH comment: Suggest removing next bullet as I feel like it's getting into the weeds too much, and only makes sense after a bullet describing how logistic regression LRPs can be statistically integrated with SR-based benchmarks and CU status.
 
 For logistic regression LRPs derived from CU assessments that are independent of spawner-recruitment models (e.g, that use habitat-based benchmarks), it is still be possible to integrate uncertainties from the CU assessments to SMU-level LRPs though bootstrapping methods. For example, where CU benchmark estimates are provided with uncertainties, benchmarks can be sampled from those distributions randomly and used to estimate a distribution of LRPs. In preliminary analyses, this approach was applied to the case study for West Coast Vancouver Island Chinook Salmon to derive uncertainty in logistic regression LRPs that accounted for uncertainty in status of component inlets from a watershed-area model. However, because the data did not support the use of logistic regression for that case study, results are not presented, but code to apply this method is available in our repository.
 -->
 
-When considering logistic regression based LRPs under alternative model assumptions, such as different formulation of the stock-recruitment model, LRPs can be chosen based on strength of evidence for underlying assumptions or averaged when alternative assumptions are all equally plausible. Care should be taken when there is little or no overlap in the distribution of LRPs under various model assumptions, where averaging can obscure different plausible realities that would require alternative management actions. <!--CH: this pgh is new. Do I need similar text for projection LRPS?-->
+When considering logistic regression LRPs under alternative model assumptions, such as different formulation of the stock-recruitment model, LRPs can be chosen based on strength of evidence for underlying assumptions or averaged when alternative assumptions are all equally plausible. Care should be taken when there is little or no overlap in the distribution of LRPs under various model assumptions, where averaging can obscure different plausible realities that would require alternative management actions. <!--CH: this pgh is new. Do I need similar text for projection LRPS?-->
 
 <!--CH: the following 2 lines give a line break before the next heading-->
 \
@@ -112,8 +112,8 @@ For aggregate abundance LRPs we recommend that SMU status be provisional when SM
 \begin{itemize} 
 \item We recommend future research be prioritized to evaluate the impacts of:
 \begin{itemize} 
-\item Temporal trends in underlying population processes such as intrinsic productivity and carrying capacity on biological benchmarks and reference points .
-\item Adapting LRPs to include a broader scope for serious harm, including ecosystem and habitat considerations and traditional knowledge.
+\item Temporal trends in underlying population processes such as intrinsic productivity and carrying capacity on biological benchmarks and reference points.
+\item Adapting LRPs to include a broader scope for serious harm, including ecosystem and habitat considerations and Indigenous Knowledge.
 \item Simulation evaluation of LRP methods given temporal variability in population parameters and other sources of uncertainty.
 \end{itemize}
 \end{itemize}
@@ -131,7 +131,7 @@ Although evidence for time-varying population processes is strong, guidance on i
 
 Even if time-varying benchmarks or reference points are considered, it is difficult to define how often they should be changed [@zhangReportOceanFrontier2021]. Mistimed changes in benchmarks or reference points may lead to biases in stock status and volatility of management responses may lead to management uncertainty, reducing trust in the management process [@adkisonReviewSalmonSpawnerRecruitment2021]. Recent studies recommend the use of case-specific feedback simulation exercises in order to determine the appropriate scale to adjust reference points when stock-recruitment parameters are non-stationary [@holtImpactTimevaryingProductivity2020; @zhangAccountingNonstationaryStock2021; @olearyComparisonMultipleApproaches2020]. However, full feedback simulation studies might not be feasible for every CU where trends are suspected due to limited resources. 
 
-Further research identifying when and how to account for time-varying parameters in assessments and management of Pacific salmon is warranted, and is currently underway within DFO. Guidance on accounting for time-varying parameters that differ among CUs within an SMU is also warranted. Time-varying stock-recruitment dynamics usually occur at the CU level, and the implications for SMU-based LRPs that contain multiple CUs are not straightforward. There are no clear guidelines on how to translate time-varying stock recruitment parameters for CUs into aggregate-level LRPs. Effects of time-varying CU recruitment dynamics on aggregate abundance- and proportion-based LRPs will depend on the degree of synchrony among CUs, the direction of the change in recruitment parameters, and past and current stock status, among other factors. For example, in our case study on Interior Fraser River Coho Salmon, when consistent reductions in productivity were introduced in one sensitivity analysis (analysis that included informative priors on capacity in CU-level spawner-recruitment models), benchmarks declined for most CUs as did aggregate abundance-based LRP for the SMU. However, in cases where productivity varies at different rates among CUs or capacity changes as well, impacts on CU-level benchmarks and SMU-level LRPs will not be easily predictable. 
+Further research identifying when and how to account for time-varying parameters in assessments and management of Pacific salmon is warranted, and is currently underway within DFO. Guidance on accounting for time-varying parameters that differ among CUs within an SMU is also warranted. Time-varying stock-recruitment dynamics usually occur at the CU level, and the implications for SMU-based LRPs that contain multiple CUs are not straightforward. There are no clear guidelines on how to translate time-varying stock recruitment parameters for CUs into aggregate-level LRPs. Effects of time-varying CU recruitment dynamics on aggregate abundance- and proportion-based LRPs<!--LW comment: remove 'based'?--> will depend on the degree of synchrony among CUs, the direction of the change in recruitment parameters, and past and current stock status, among other factors. For example, in our case study on Interior Fraser River Coho Salmon, when consistent reductions in productivity were introduced in one sensitivity analysis (analysis that included informative priors on capacity in CU-level spawner-recruitment models), benchmarks declined for most CUs as did aggregate abundance-based LRP for the SMU. However, in cases where productivity varies at different rates among CUs or capacity changes as well, impacts on CU-level benchmarks and SMU-level LRPs will not be easily predictable. 
 
 
 ### ADAPTING LRPS TO INCLUDE A BROADER SCOPE OF SERIOUS HARM
