LW comments on appendix 10 guidelines and ch 4 case studies

--- a/guidelinesWP/10-appendixCaseStudies.Rmd
+++ b/guidelinesWP/10-appendixCaseStudies.Rmd
@@ -55,7 +55,7 @@ KH: have moved
 
 The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hells Gate in the Fraser Canyon. This SMU consists of 5 CUs: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015]. Declines in Interior Fraser Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundances of each subpopulation above conservation thresholds [@ifcrtConservationStrategyCoho2006]. In 2014, a peer-reviewed WSP status assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson) [@dfoWildSalmonPolicy2015]. As part of the WSP assessment, S~gen~ was estimated for each CU and used as one of several benchmarks considered when determining integrated CU status.  
 
-We used data on total annual spawner abundances, recruitment by age (from natural spawning), and hatchery-based smolt-to-adult survival rate indices covering return years 1998-2020 to derive CU-level spawner-recruitment based benchmarks. Data on natural-origin spawner abundances at each of the 11 sub-populations summed to CU level were used to assess status and trends at the CU level for proportion and logistic regression LRPs. These data, along with exploitation rates were used to parameterize the projection model for projection regression LRPs. Hatchery contribution to production was usually small in this SMU, with PNI values >0.5, and usually >0.72. Spawner abundances are positively correlated among CUs, with an average correlation of 0.56 (Figure \@ref(fig:density-cor-plot)).
+We used data on total annual spawner abundances, recruitment by age (from natural spawning), and hatchery-based smolt-to-adult survival rate indices covering return years 1998-2020 to derive CU-level spawner-recruitment based benchmarks. Data on natural-origin spawner abundances at each of the 11 sub-populations summed to CU level were used to assess status and trends at the CU level for proportion and logistic regression LRPs. These data, along with exploitation rates were used to parameterize the projection model for projection regression<!--LW comment: is this correct--> LRPs. Hatchery contribution to production was usually small in this SMU, with PNI values >0.5, and usually >0.72. Spawner abundances are positively correlated among CUs, with an average correlation of 0.56 (Figure \@ref(fig:density-cor-plot)).
 
 <!--CH: to do for next iteration: add rug plot for data points, and limit x-axis to 00.5=-->
 
@@ -83,28 +83,28 @@ ggplot(df, aes(cor, fill=SMU, colour=SMU)) + geom_density(alpha=0.1) +
 ```
 
 
-We characterized CU status in three ways, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@ifcrtConservationStrategyCoho2006]. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020, which related to the strength of density dependence. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@ifcrtConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Pacific Salmon Status Scanner are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009], we applied the other two approaches (2) and (3) to support the development of aggregate abundance LRPs and for a point of comparison with the Salmon Scanner. Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide logistic regression and projection regression LRPs for demonstration purposes. Fisheries on Interior Fraser Coho are managed under a bilateral Canada/US management regime, detailed in Annex IV Chapter 5 of the Pacific Salmon Treaty. 
+We characterized CU status in three ways, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@ifcrtConservationStrategyCoho2006]. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020, which related to the strength of density dependence. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@ifcrtConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Pacific Salmon Status Scanner are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009], we applied the other two approaches (2) and (3) to support the development of aggregate abundance LRPs and for a point of comparison with the Salmon Scanner. Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide logistic regression and projection regression<!--LW comment: delete regression?--> LRPs for demonstration purposes. Fisheries on Interior Fraser Coho are managed under a bilateral Canada/US management regime, detailed in Annex IV Chapter 5 of the Pacific Salmon Treaty. 
 
-For this SMU, we evaluated the sensitivity of LRPs based on aggregate abundances to data availability with a retrospective analysis by re-estimating CU-level benchmarks, CU statuses, and SMU-level LRPs each year using only the data prior to that year. We also implemented a sensitivity analysis where one or two CUs were removed from the analyses iteratively and CU-level benchmarks, CU statuses, SMU-level LRPs, and SMU-level statuses were re-estimated. We further ran sensitivity analyses related to structural assumptions about the stock-recruitment relationship when deriving CU-level benchmarks for all proportion and aggregate abundance-based LRP methods.
+For this SMU, we evaluated the sensitivity of LRPs based on aggregate abundances to data availability with a retrospective analysis by re-estimating CU-level benchmarks, CU statuses, and SMU-level LRPs each year using only the data prior to that year. We also implemented a sensitivity analysis where one or two CUs were removed from the analyses iteratively and CU-level benchmarks, CU statuses, SMU-level LRPs, and SMU-level statuses were re-estimated. We further ran sensitivity analyses related to structural assumptions about the stock-recruitment relationship when deriving CU-level benchmarks for all proportion<!--LW comment: proportional?--> and aggregate abundance-based<!--LW comment: delete based?--> LRP methods.
 
-We found that LRPs and resulting status were most sensitive to structural assumptions about the shape of the stock-recruitment relationship. LRPs were less sensitive to LRP methods or CU assessment approach (Pacific Salmon Status Scanner vs single-metric on spawner abundances vs. single metric on distribution) or the addition of more years or CUs of data.  However, we note that for logistic regression LRPs, the exclusion of CUs resulted in larger uncertainties in SMU-level status, though the 95% CIs of status usually overlapped with the status estimated using all the data. <!--CH: I removed all mention of status being more optimistic with fewer CUs. As we spoke about, this result is likely not generalizable for logistic regression based LRPS. -->
+We found that LRPs and resulting status were most sensitive to structural assumptions about the shape of the stock-recruitment relationship. LRPs were less sensitive to LRP methods or CU assessment approach (Pacific Salmon Status Scanner versus single-metric on spawner abundances versus single metric on distribution) or the addition of more years or CUs of data.  However, we note that for logistic regression LRPs, the exclusion of CUs resulted in larger uncertainties in SMU-level status, though the 95% CIs of status usually overlapped with the status estimated using all the data. <!--CH: I removed all mention of status being more optimistic with fewer CUs. As we spoke about, this result is likely not generalizable for logistic regression based LRPS. -->
 
-For this case study, we further demonstrated the approach of averaging over structural uncertainties to provide a projection regression LRP that accounts for that uncertainty. Similar averaging is also possible for logistic regression LRPs.
+For this case study, we further demonstrated the approach of averaging over structural uncertainties to provide a projection regression<!--LW comment: delete regression?--> LRP that accounts for that uncertainty. Similar averaging is also possible for logistic regression LRPs.
 
 ## WEST COAST VANCOUVER ISLAND CHINOOK
 
 
-The West Coast of Vancouver Island (WCVI) Chinook SMU consists of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 escapement indicator stocks distributed across the 7 inlets and 3 CUs. Escapement indicator stocks are those with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002; @pacificsalmoncommissionPacificSalmonCommission2018]. Hatchery enhancement is an substantial component of many of these stocks, however, only escapement indicator stocks without significant hatchery enhancement (PNI $\geqslant$ 0.5) were included in our analyses (see Section \@ref(est-methods)).  Because time-series of the proportion of hatchery-origin spawners are not available for these stocks, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may result in overly optimistic assessments of status relative to analyses excluding hatchery-origin fish (as in the Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets within the SMU, with an average correlation of 0.28 (Figure \@ref(fig:density-cor-plot)).
+The West Coast of Vancouver Island (WCVI) Chinook SMU consists of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 escapement indicator stocks distributed across the 7 inlets and 3 CUs. Escapement indicator stocks are those with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002; @pacificsalmoncommissionPacificSalmonCommission2018]. Hatchery enhancement is a substantial component of many of these stocks, however, only escapement indicator stocks without significant hatchery enhancement (PNI $\geqslant$ 0.5) were included in our analyses (see Section \@ref(est-methods)).  Because time-series of the proportion of hatchery-origin spawners are not available for these stocks, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may result in overly optimistic assessments of status relative to analyses excluding hatchery-origin fish (as in the Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets within the SMU, with an average correlation of 0.28 (Figure \@ref(fig:density-cor-plot)).
 
 
 For WCVI Chinook, inlets nested within CUs are considered an important spatial scale of biodiversity given the geographic separation of spawning habitats among inlets, and limited straying observed among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We therefore considered spawner abundances at the scale of inlets within CUs because of expected limited demographic exchange at this spatial scale.
 
 
-Two of the three CUs in this SMU, WCVI-South and WCVI-Nootka & Kyuquot, were assessed as Red status in a recent integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016].  WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor smolt-to-age-2 survival for WCVI Chinook and low spawner levels over the past two decades were highlighted as reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021]. 
+Two of the three CUs in this SMU, WCVI-South and WCVI-Nootka & Kyuquot, were assessed as Red status in a recent integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016].  WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan (IFMP) and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor smolt-to-age-2 survival for WCVI Chinook and low spawner levels over the past two decades were highlighted as reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021]. 
 
-Biological benchmarks have been estimated for WCVI indicator stocks using an empirical relationship between watershed area and two stock-recruitment biological benchmarks, spawner abundances at replacement, S~REP~, and S~MSY~, based on a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks precludes the use of stock-recruitment based benchmarks. For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and S~REP~ was re-estimated using a hierarchical Bayesian model [as in @liermannUsingAccessibleWatershed2010], and applied to WCVI Chinook inlets. 
+Biological benchmarks have been estimated for WCVI indicator stocks using an empirical relationship between watershed area and two stock-recruitment biological benchmarks, spawner abundances at replacement, S~REP~, and S~MSY~, based on a meta-analysis of 25 Chinook stocks across North America <!-- LW comment: suggest replacing with: ... and two stock-recruitment benchmarks: S~REP~ (spawner abundance at replacement) and S~MSY~, based on...-->   [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks precludes the use of stock-recruitment based benchmarks. For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and S~REP~ was re-estimated using a hierarchical Bayesian model [as in @liermannUsingAccessibleWatershed2010], and applied to WCVI Chinook inlets. 
 
-We characterized CU status in two ways for this case study, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ derived from watershed-area model estimates of S~REP~ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: proportional LRPs and projection regression LRPs. Based on CU-level assessments, there were no years in the historical data where all CUs were above the Red zone, so it was not possible to identify logistic regression LRPs.  Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide projection regression LRPs for illustrative purposes. Fisheries are managed based a combination of the bilateral Canada-US management regime specified under the Pacific Salmon Treaty and local co-governance. We implemented sensitivity analyses on projection regression LRPs across two key uncertainties, variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in intrinsic productivity, and capacity are provided in Appendix D of Holt et al. in (review).
+We characterized CU status in two ways for this case study, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ derived from watershed-area model estimates of S~REP~ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: proportional LRPs and projection regression LRPs. Based on CU-level assessments, there were no years in the historical data where all CUs were above the Red zone, so it was not possible to identify logistic regression LRPs.  Even though aggregate abundance LRPs are not required for harvest management of this SMU, we provide projection regression <!-- LW comment: delete regression?-->LRPs for illustrative purposes. Fisheries are managed based on a combination of the bilateral Canada-US management regime specified under the Pacific Salmon Treaty and local co-governance. We implemented sensitivity analyses on projection regression LRPs across two key uncertainties: variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in intrinsic productivity, and capacity are provided in Appendix D of Holt et al. in (review).
 
 We found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection regression LRPs were highly sensitive to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, declines (by 25%) or increases (by 50%) in the distribution of productivities among inlets resulted in large changes in LRPs estimates. 
 
